--- a/public/src/css/styles.css
+++ b/public/src/css/styles.css
@@ -165,3 +165,25 @@ form button:hover {
     max-width: 100%;
     height: auto;
 }
+.social-media-links {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+}
+
+.social-media-links li {
+    margin: 0 10px;
+}
+
+.social-media-links a {
+    color: #333;
+    text-decoration: none;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+}
+
+.social-media-links img {
+    margin-right: 8px;
+}
